# fc-nixos-release-tools-testing

./: .gitignore  README.md  auto-merge-config.toml  bootstrap.sh  fc-release.py  flake.nix  nixpkgs_changelog.py  pyproject.toml  requirements.txt
.github/workflows/: auto-merge.yaml  update-nixpkgs.yaml
src/: fc_release.py
src/auto_merge/: __init__.py  check_pr.py  config.py  merge.py  utils.py
src/auto_merge/tests/: __init__.py  test_utils.py
src/release/: __init__.py  add_branch.py  branch.py  doc.py  fc_release.py  markdown.py  nixpkgs_changelog.py  state.py  utils.py
src/update_nixpkgs/: __init__.py  cleanup.py  update.py
src/utils/: matrix.py
