[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fc-nixos-release-tools"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "scriv==1.5.1",
    "pygithub~=2",
    "gitpython~=3"
]

[project.scripts]
fc-release = "release.fc_release:main"
update-nixpkgs = "update_nixpkgs:main"
